feat: Update content model to relay on note metadata properties - EXO-71928,EXO-71929,EXO-71930 - Meeds-io/MIPs#128 (#180)
Update content model to relay on note metadata properties